--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <div class = 'dflex nav'>
+        <div class = 'logo'></div>
+        <div class = 'nav-item'><a href = '#'></a></div>
+        <div class = 'nav-item'><a href = '#'></a></div>
+        <div class = 'nav-item'><a href = '#'></a></div>
+        <div class = 'nav-item'><a href = '#'></a></div>
+        <div class = 'nav-item'><a href = '#'></a></div>
+        <div class = 'nav-item'><button></button></div> 
+        <div class = 'nav-search'><input type = 'text' placeholder = 'search Article'></div>
+
+      </div>
+    </nav>
+  </header>
+  <main>
+
+  </main>
 
 </body>
 </html>
