--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New York Times Article Page</title>
+  <title>Smashing Magazine Replica</title>
   <script src="https://kit.fontawesome.com/fdaa9ad399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -12,13 +12,17 @@
   <header>
     <nav>
       <div class = 'dflex nav'>
-        <div class = 'logo'></div>
-        <div class = 'nav-item'><a href = '#'></a></div>
-        <div class = 'nav-item'><a href = '#'></a></div>
-        <div class = 'nav-item'><a href = '#'></a></div>
-        <div class = 'nav-item'><a href = '#'></a></div>
-        <div class = 'nav-item'><a href = '#'></a></div>
-        <div class = 'nav-item'><button></button></div> 
+        <div class = 'logo'>
+            <img src="images/logofull.svg" alt="logo">
+        </div>
+        <div class="dflex nav-item-container">
+            <div class = 'nav-item'><a href = '#'>Articles</a></div>
+            <div class = 'nav-item'><a href = '#'>Guides</a></div>
+            <div class = 'nav-item'><a href = '#'>Books</a></div>
+            <div class = 'nav-item'><a href = '#'>Events</a></div>
+            <div class = 'nav-item'><a href = '#'>Membership</a></div>
+            <div class = 'nav-item nav-button'> <a href="#"> more</a> </div> 
+        </div>
         <div class = 'nav-search'><input type = 'text' placeholder = 'search Article'></div>
 
       </div>
