Add Style to nav and article element
finished styling on the header
Started work on the main section

--- a/index.html
+++ b/index.html
@@ -8,29 +8,58 @@
   <script src="https://kit.fontawesome.com/fdaa9ad399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header>
     <nav>
-      <div class = 'dflex nav'>
-        <div class = 'logo'>
-            <img src="images/logofull.svg" alt="logo">
+      <div class='dflex nav'>
+        <div class='logo'>
+          <img src="images/logofull.svg" alt="logo">
         </div>
         <div class="dflex nav-item-container">
-            <div class = 'nav-item'><a href = '#'>Articles</a></div>
-            <div class = 'nav-item'><a href = '#'>Guides</a></div>
-            <div class = 'nav-item'><a href = '#'>Books</a></div>
-            <div class = 'nav-item'><a href = '#'>Events</a></div>
-            <div class = 'nav-item'><a href = '#'>Membership</a></div>
-            <div class = 'nav-item nav-button'> <a href="#"> more</a> </div> 
+          <div class='nav-item'><a href='#'>Articles</a></div>
+          <div class='nav-item'><a href='#'>Guides</a></div>
+          <div class='nav-item'><a href='#'>Books</a></div>
+          <div class='nav-item'><a href='#'>Events</a></div>
+          <div class='nav-item'><a href='#'>Membership</a></div>
+          <div class='nav-item nav-button'> <a href="#"> more</a> </div>
         </div>
-        <div class = 'nav-search'><input type = 'text' placeholder = 'search Article'></div>
+        <div class='nav-search'><input type='text'></div>
 
       </div>
     </nav>
   </header>
   <main>
+    <article class="article-one">
+      <div class="article-items one">
+        <div class="article-container">
+          <div class="article-writer">
+            <img src="Images/usericon.png" alt="">
+            <div>
+              <h1>Juan Van Wissem <span>wrote</span></h1>
 
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore nemo
+          </p>
+        </div>
+      </div>
+      <div class="article-items two">
+        <div class="article-container">
+          <div class="article-writer">
+            <img src="Images/usericon.png" alt="">
+            <div>
+              <h1>Juan Van Wissem <span>wrote</span></h1>
+
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore nemo
+          </p>
+        </div>
+      </div>
+    </article>
   </main>
 
 </body>
+
 </html>
