--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <div class='dflex nav'>
         <div class='logo'>
-          <img src="images/logofull.svg" alt="logo">
+          <img src="Images/logofull.svg" alt="logo">
         </div>
         <div class="dflex nav-item-container">
           <div class='nav-item'><a href='#'>Articles</a></div>
