--- a/index.html
+++ b/index.html
@@ -30,34 +30,87 @@
     </nav>
   </header>
   <main>
-    <article class="article-one">
-      <div class="article-items one">
-        <div class="article-container">
-          <div class="article-writer">
-            <img src="Images/usericon.png" alt="">
-            <div>
-              <h1>Juan Van Wissem <span>wrote</span></h1>
+    <section class="article-grid">
+      <article class="article-one">
+        <div class="article-items one">
+          <div class="article-container">
+            <div class="article-writer">
+              <img src="Images/usericon.png" alt="">
+              <div>
+                <h1>Juan Van Wissem <span>wrote</span></h1>
 
+              </div>
             </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore
+              nemo
+            </p>
+            <i class="fa fa-long-arrow-right fa-3x"></i>
           </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore nemo
+        </div>
+        <div class="article-items two">
+          <div class="article-container">
+            <div class="article-writer">
+              <img src="Images/usericon.png" alt="">
+              <div>
+                <h1>Juan Van Wissem <span>wrote</span></h1>
+
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore
+              nemo
+            </p>
+            <i class="fa fa-long-arrow-right fa-3x"></i>
+          </div>
+        </div>
+      </article>
+      <div class="position-div">
+        <div>
+          <p>
+            <span>Don’t Miss These Latest</span>
+            <br>
+            <span>Articles</span>
           </p>
         </div>
-      </div>
-      <div class="article-items two">
-        <div class="article-container">
-          <div class="article-writer">
-            <img src="Images/usericon.png" alt="">
-            <div>
-              <h1>Juan Van Wissem <span>wrote</span></h1>
-
-            </div>
-          </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore nemo
-          </p>
+        <div class="contrast-button">
+          <i class="fas fa-adjust"></i>
+          <button>Bring back red</button>
         </div>
       </div>
-    </article>
+    </section>
+    <section class="article-grid">
+      <article class="article-one">
+        <div class="article-items two">
+          <div class="article-container">
+            <div class="article-writer">
+              <img src="Images/usericon.png" alt="">
+              <div>
+                <h1>Juan Van Wissem <span>wrote</span></h1>
+
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore
+              nemo
+            </p>
+            <i class="fa fa-long-arrow-right fa-3x"></i>
+          </div>
+        </div>
+        <div class="article-items one">
+          <div class="article-container">
+            <div class="article-writer">
+              <img src="Images/usericon.png" alt="">
+              <div>
+                <h1>Juan Van Wissem <span>wrote</span></h1>
+
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus accusamus adipisci explicabo dolore
+              nemo
+            </p>
+            <i class="fa fa-long-arrow-right fa-3x"></i>
+          </div>
+        </div>
+      </article>
+    </section>
   </main>
 
 </body>
