Add style to the positioned-div

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           </p>
         </div>
         <div class="contrast-button">
-          <i class="fas fa-adjust"></i>
+          <div class="contrast-logo">
+            <i class="fas fa-adjust"></i>
+          </div>
           <button>Bring back red</button>
         </div>
       </div>
