--- a/index.html
+++ b/index.html
@@ -113,6 +113,80 @@
         </div>
       </article>
     </section>
+    <section class='dflex second-article-container'>
+      <article class='article-flex1'>
+        <p class='article-flex1-items span'> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+
+      </article>
+
+      <article class='article-flex1'>
+        <p class='article-flex1-items span'> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+      </article>
+
+      <article class='article-flex1'>
+        <p class='article-flex1-items span '> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+      </article>
+    </section>
+    
+    <section class = 'third-article-container'>
+      <article class = 'article-flex2-item1'>
+        <img src = 'Images/pic.png' alt = 'picture'>
+        <p class = 'flex2-item1-paragraph'>Squarespace</p>
+        <p class = 'flex2-item1-paragraph2'>Start a free trial with the Squarspace now!</p>
+        <button type = 'button'class = 'third-article-buttons'>Start free trial</button>
+      </article>
+      <article class = 'article-flex2-item2'>
+        <img src = 'Images/usericon.png' alt = 'usericon'>
+        <h1 class = 'flex2-item2-h1'>10,000 Members</h1>
+        <p class = 'flex2-item2-paragraph'>A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a mont</p>
+        <button class = 'third-article-buttons' >Exple our features</button>
+      </article>
+      <article class = 'article-flex2-item3'>
+        <div class = 'third-container-div'>
+        <span class = 'flex2-item3-span'>
+          3 days
+        </span>
+          <h1 class = 'flex2-item3-h1'>Watch this interesting video</h1>
+          <p class = 'flex2-item3-p'>By Gzim Asani</p>
+          <p class = 'flex2-item3-p'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio modi ullam maiores corporis tenetur voluptatum ipsa delectus tempora dolores enim deleniti, debitis unde repellat sit omnis illo, provident eius accusantium?</p>
+          
+        </div>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+      </article>
+    </section>
   </main>
 
 </body>
