Add new section of article to the main
Added Article section six and flexed it accordingly

--- a/index.html
+++ b/index.html
@@ -160,32 +160,171 @@
         <i class="fa fa-long-arrow-right fa-3x"></i>
       </article>
     </section>
-    
-    <section class = 'third-article-container'>
-      <article class = 'article-flex2-item1'>
-        <img src = 'Images/pic.png' alt = 'picture'>
-        <p class = 'flex2-item1-paragraph'>Squarespace</p>
-        <p class = 'flex2-item1-paragraph2'>Start a free trial with the Squarspace now!</p>
-        <button type = 'button'class = 'third-article-buttons'>Start free trial</button>
+
+    <section class='third-article-container'>
+      <article class='article-flex2-item1'>
+        <img src='Images/pic.png' alt='picture'>
+        <p class='flex2-item1-paragraph'>Squarespace</p>
+        <p class='flex2-item1-paragraph2'>Start a free trial with the Squarspace now!</p>
+        <button type='button' class='article-buttons'>Start free trial</button>
       </article>
-      <article class = 'article-flex2-item2'>
-        <img src = 'Images/usericon.png' alt = 'usericon'>
-        <h1 class = 'flex2-item2-h1'>10,000 Members</h1>
-        <p class = 'flex2-item2-paragraph'>A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a mont</p>
-        <button class = 'third-article-buttons' >Exple our features</button>
+      <article class='article-flex2-item2'>
+        <img src='Images/usericon.png' alt='usericon'>
+        <h1 class='flex2-item2-h1'>10,000 Members</h1>
+        <p class='flex2-item2-paragraph'>A friendly community that keeps this website alive. With books, webinars,
+          discounts and networking — for just 1 coffee a mont</p>
+        <button class='article-buttons'>Exple our features</button>
       </article>
-      <article class = 'article-flex2-item3'>
-        <div class = 'third-container-div'>
-        <span class = 'flex2-item3-span'>
-          3 days
-        </span>
-          <h1 class = 'flex2-item3-h1'>Watch this interesting video</h1>
-          <p class = 'flex2-item3-p'>By Gzim Asani</p>
-          <p class = 'flex2-item3-p'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio modi ullam maiores corporis tenetur voluptatum ipsa delectus tempora dolores enim deleniti, debitis unde repellat sit omnis illo, provident eius accusantium?</p>
-          
+      <article class='article-flex2-item3'>
+        <div class='third-container-div'>
+          <span class='flex2-item3-span'>
+            3 days
+          </span>
+          <h1 class='flex2-item3-h1'>Watch this interesting video</h1>
+          <p class='flex2-item3-p'>By Gzim Asani</p>
+          <p class='flex2-item3-p'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio modi ullam maiores
+            corporis tenetur voluptatum ipsa delectus tempora dolores enim deleniti, debitis unde repellat sit omnis
+            illo, provident eius accusantium?</p>
+
         </div>
         <i class="fa fa-long-arrow-right fa-3x"></i>
       </article>
+    </section>
+    <section class='dflex second-article-container margin-top'>
+      <article class='article-flex1'>
+        <p class='article-flex1-items span'> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+
+      </article>
+
+      <article class='article-flex1'>
+        <p class='article-flex1-items span'> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+      </article>
+
+      <article class='article-flex1'>
+        <p class='article-flex1-items span '> 6 days ago</p>
+        <h1 class='article-flex1-items'>
+          Django's Music goes here
+        </h1>
+        <h2 class='article-flex1-items'>
+          By precious Nandale
+        </h2>
+        <p class='article-flex1-items paragraph-item'>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore id. Non suscipit obcaecati
+          possimus consequatur dolorem quos expedita? Ipsa ad reiciendis natus nihil non, a ullam quos eius pariatur.
+        </p>
+        <i class="fa fa-long-arrow-right fa-3x"></i>
+      </article>
+    </section>
+    <section>
+      <article class='article-class-four'>
+        <img src='Images/usericon.png' alt='usericon'>
+        <h1 class='flex2-item2-h1'>10,000 Members</h1>
+        <p class='flex2-item2-paragraph'>A friendly community that keeps this website alive. With books, webinars,
+          discounts and networking — for just 1 coffee a mont</p>
+        <button class='article-buttons'>Exple our features</button>
+      </article>
+    </section>
+    <section>
+      <article class="article-class-five">
+        <p>Meet “Inclusive Components”: Accessible Front-End Patterns.</p>
+        <p>Our new practical book on building accessible and robust interfaces. From accordions and buttons to modals
+          and tables. With bulletproof code samples. Written by Heydon Pickering.</p>
+        <p><button class="article-buttons five-btn">Learn more about book</button></p>
+        <img src="images/usericon.png" alt="picture">
+      </article>
+    </section>
+    <section class="article-class-six">
+      <article class="flex first-article-class-six">
+        <img class="article-six-img-lrg" src="Images/usericon.png" alt="">
+        <div>
+          <p>Dynamic, Data-Based Color</p>
+          <p>
+            Rick Viscomi (@rick_viscomi) is a Senior Web Developer Programs Engineer at Google. Passionate about web
+            transparency, he maintains the Chrome User Experience Report and the open-source HTTP Archive project. To
+            bring meaning to the raw stats and trends that the HTTP Archive has been collecting, Rick published the
+            first
+            issue of the Web Almanac this year, a yearly report on the state of the web, backed up by real data and
+            trusted web experts. Rick is also the co-author of Using WebPage Test and host of the video series The State
+            of the Web. Thank you for everything you do for the web community, dear Rick!
+          </p>
+        </div>
+      </article>
+      <div class="dflex-justify">
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+      </div>
+      <div class="dflex-justify">
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+      </div>
+      <div class="dflex-justify">
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <p>Ceejay Okoli</p>
+            <p>Dynamic, Data-Based Color</p>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
 
