Added the last two articles and styled

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
         <p>Our new practical book on building accessible and robust interfaces. From accordions and buttons to modals
           and tables. With bulletproof code samples. Written by Heydon Pickering.</p>
         <p><button class="article-buttons five-btn">Learn more about book</button></p>
-        <img src="images/usericon.png" alt="picture">
+        <img src="Images/usericon.png" alt="picture">
       </article>
     </section>
     <section class="article-class-six">
       <article class="flex first-article-class-six">
-        <img class="article-six-img-lrg" src="Images/usericon.png" alt="">
+        <img class="article-six-img-lrg" src="Images/usericon.png" alt="User">
         <div>
           <p>Dynamic, Data-Based Color</p>
           <p>
@@ -325,6 +325,47 @@
           </div>
         </article>
       </div>
+    </section>
+
+    <section class = 'article-class-seven dflex'>
+      <article class = 'flex-justify margin-top-article'>
+        <h4 class = 'article-seven-items bold'>FEATURED SMASHING BOOK</h4>
+        <h1 class = 'article-seven-items bold'>Design Systems</h1>
+        <p class = 'article-seven-items'>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design system to create great digital products. With common traps, gotchas and lessons learned.</p>
+        <button type = 'button' class = 'article-seven-items button'>JUMP TO TABLE OF CONTENTS ↬</button>
+      </article>
+      <img src = 'Images/usericon.png' class = 'article-seven-img-lrg'>
+    </section>
+
+    <section class = 'article-class-eight'>
+      <article>
+        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
+        <h1 class = 'article-eight-items'>CSS Layout</h1>
+        <p class = 'article-eight-items'>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help.</p>
+        <button type = 'button' class = 'article-eight-buttons'>Explore CSS Layout</button>
+      </article>
+      <article>
+        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
+        <h1 class = 'article-eight-items'>JavaScript & Frameworks</h1>
+        <p class = 'article-eight-items'>React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript developer working with one of these frameworks, or just starting to learn, our authors have created some tutorials for you.</p>
+        <button type = 'button' class = 'article-eight-buttons'>Explore JavaScript framework</button>
+      </article>
+      <article>
+        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
+        <h1 class = 'article-eight-items'>Web Performance</h1>
+        <p class = 'article-eight-items'>Ensuring your site loads quickly is important. The subject touches almost every part of web design and development, from your choice of images to the performance of your web server. In this guide we bring together information that can help you build a fast site, and keep it fast.</p>
+        <button type = 'button' class = 'article-eight-buttons'>Explore Performance</button>
+      </article>
+      <article>
+        <img src = 'Images/usericon.png'>
+        <h1 class = 'article-eight-items'>Email Newsletter</h1>
+        <p class = 'article-eight-items'>Every second Tuesday, we send an email newsletter with useful techniques on front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.</p>
+        <div>
+          <input type = 'text' class = 'article-eight-buttons'> <button type = 'button' class = 'last-button'></button>
+        </div>
+        <p class = 'article-eight-items'Front-end> Front-end, UX and design. 1× a week.
+          You can always unsubscribe with just 1 click.</p>
+      </article>
     </section>
   </main>
 
