Add footer and style footer elements
Added the footer to the body
Added a list tag to the footer and aligned it properly

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
     <section class="article-class-six">
       <article class="flex first-article-class-six">
         <img class="article-six-img-lrg" src="Images/usericon.png" alt="User">
-        <div>
-          <p>Dynamic, Data-Based Color</p>
+        <div class="first-article-class-six-div">
+          <h1>Dynamic, Data-Based Color</h1>
           <p>
             Rick Viscomi (@rick_viscomi) is a Senior Web Developer Programs Engineer at Google. Passionate about web
             transparency, he maintains the Chrome User Experience Report and the open-source HTTP Archive project. To
@@ -272,103 +272,157 @@
         </div>
       </article>
       <div class="dflex-justify">
-        <article class="flex">
+        <article class="flex article-class-six-cards">
           <img class="article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
-        <article class="flex">
+        <article class="flex article-class-six-cards">
           <img class="article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-        </article>
-      </div>
-      <div class="dflex-justify">
-        <article class="flex">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-        </article>
-        <article class="flex">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
       </div>
       <div class="dflex-justify">
-        <article class="flex">
+        <article class="flex article-class-six-cards">
           <img class="article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
-        <article class="flex">
+        <article class="flex article-class-six-cards">
           <img class="article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
-            <p>Ceejay Okoli</p>
-            <p>Dynamic, Data-Based Color</p>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+      </div>
+      <div class="dflex-justify">
+        <article class="flex article-class-six-cards">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+        <article class="flex article-class-six-cards">
+          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
       </div>
     </section>
 
-    <section class = 'article-class-seven dflex'>
-      <article class = 'flex-justify margin-top-article'>
-        <h4 class = 'article-seven-items bold'>FEATURED SMASHING BOOK</h4>
-        <h1 class = 'article-seven-items bold'>Design Systems</h1>
-        <p class = 'article-seven-items'>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design system to create great digital products. With common traps, gotchas and lessons learned.</p>
-        <button type = 'button' class = 'article-seven-items button'>JUMP TO TABLE OF CONTENTS ↬</button>
+    <section class='article-class-seven dflex'>
+      <article class='flex-justify margin-top-article'>
+        <h4 class='article-seven-items bold'>FEATURED SMASHING BOOK</h4>
+        <h1 class='article-seven-items bold'>Design Systems</h1>
+        <p class='article-seven-items'>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how
+          to set up an effective design system to create great digital products. With common traps, gotchas and lessons
+          learned.</p>
+        <button type='button' class='article-seven-items button'>JUMP TO TABLE OF CONTENTS ↬</button>
       </article>
-      <img src = 'Images/usericon.png' class = 'article-seven-img-lrg'>
+      <img src='Images/usericon.png' class='article-seven-img-lrg'>
     </section>
 
-    <section class = 'article-class-eight'>
+    <section class='article-class-eight'>
       <article>
-        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
-        <h1 class = 'article-eight-items'>CSS Layout</h1>
-        <p class = 'article-eight-items'>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help.</p>
-        <button type = 'button' class = 'article-eight-buttons'>Explore CSS Layout</button>
+        <h4 class='article-eight-items'>A Smashing Guide to</h4>
+        <h1 class='article-eight-items'>CSS Layout</h1>
+        <p class='article-eight-items'>CSS Layout has been transformed over the past years. We have you covered with all
+          you need to master this new world. If you want to understand the technical details, or learn how to use new
+          CSS creatively, these guides can help.</p>
+        <button type='button' class='article-eight-buttons'>Explore CSS Layout</button>
       </article>
       <article>
-        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
-        <h1 class = 'article-eight-items'>JavaScript & Frameworks</h1>
-        <p class = 'article-eight-items'>React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript developer working with one of these frameworks, or just starting to learn, our authors have created some tutorials for you.</p>
-        <button type = 'button' class = 'article-eight-buttons'>Explore JavaScript framework</button>
+        <h4 class='article-eight-items'>A Smashing Guide to</h4>
+        <h1 class='article-eight-items'>JavaScript & Frameworks</h1>
+        <p class='article-eight-items'>React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced
+          JavaScript developer working with one of these frameworks, or just starting to learn, our authors have created
+          some tutorials for you.</p>
+        <button type='button' class='article-eight-buttons'>Explore JavaScript framework</button>
       </article>
       <article>
-        <h4 class = 'article-eight-items'>A Smashing Guide to</h4>
-        <h1 class = 'article-eight-items'>Web Performance</h1>
-        <p class = 'article-eight-items'>Ensuring your site loads quickly is important. The subject touches almost every part of web design and development, from your choice of images to the performance of your web server. In this guide we bring together information that can help you build a fast site, and keep it fast.</p>
-        <button type = 'button' class = 'article-eight-buttons'>Explore Performance</button>
+        <h4 class='article-eight-items'>A Smashing Guide to</h4>
+        <h1 class='article-eight-items'>Web Performance</h1>
+        <p class='article-eight-items'>Ensuring your site loads quickly is important. The subject touches almost every
+          part of web design and development, from your choice of images to the performance of your web server. In this
+          guide we bring together information that can help you build a fast site, and keep it fast.</p>
+        <button type='button' class='article-eight-buttons'>Explore Performance</button>
       </article>
       <article>
-        <img src = 'Images/usericon.png'>
-        <h1 class = 'article-eight-items'>Email Newsletter</h1>
-        <p class = 'article-eight-items'>Every second Tuesday, we send an email newsletter with useful techniques on front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.</p>
-        <div>
-          <input type = 'text' class = 'article-eight-buttons'> <button type = 'button' class = 'last-button'></button>
+        <img src='Images/usericon.png'>
+        <h1 class='article-eight-items'>Email Newsletter</h1>
+        <p class='article-eight-items'>Every second Tuesday, we send an email newsletter with useful techniques on
+          front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.</p>
+        <div class="text-align last-article-eight-items-btn">
+          <input class="article-eight-last-item-input" type='text'>
+          <button type='button' class='last-button'> meeow</button>
         </div>
-        <p class = 'article-eight-items'Front-end> Front-end, UX and design. 1× a week.
+        <p class='article-eight-items' Front-end> Front-end, UX and design. 1× a week.
           You can always unsubscribe with just 1 click.</p>
       </article>
     </section>
   </main>
-
+  <footer>
+    <p></p>
+    <ul>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+    </ul>
+    <ul>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+    </ul>
+    <ul>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+    </ul>
+  </footer>
 </body>
 
 </html>
