Finish the footer and its element
Styled and added the footer elements where it should be on the page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="article-items one">
           <div class="article-container">
             <div class="article-writer">
-              <img src="Images/usericon.png" alt="">
+              <img class="img-bent" src="Images/usericon.png" alt="">
               <div>
                 <h1>Juan Van Wissem <span>wrote</span></h1>
 
@@ -50,7 +50,7 @@
         <div class="article-items two">
           <div class="article-container">
             <div class="article-writer">
-              <img src="Images/usericon.png" alt="">
+              <img class="img-bent" src="Images/usericon.png" alt="">
               <div>
                 <h1>Juan Van Wissem <span>wrote</span></h1>
 
@@ -84,7 +84,7 @@
         <div class="article-items two">
           <div class="article-container">
             <div class="article-writer">
-              <img src="Images/usericon.png" alt="">
+              <img class="img-bent" src="Images/usericon.png" alt="">
               <div>
                 <h1>Juan Van Wissem <span>wrote</span></h1>
 
@@ -99,7 +99,7 @@
         <div class="article-items one">
           <div class="article-container">
             <div class="article-writer">
-              <img src="Images/usericon.png" alt="">
+              <img class="img-bent" src="Images/usericon.png" alt="">
               <div>
                 <h1>Juan Van Wissem <span>wrote</span></h1>
 
@@ -257,7 +257,7 @@
     </section>
     <section class="article-class-six">
       <article class="flex first-article-class-six">
-        <img class="article-six-img-lrg" src="Images/usericon.png" alt="User">
+        <img class="img-bent article-six-img-lrg" src="Images/usericon.png" alt="User">
         <div class="first-article-class-six-div">
           <h1>Dynamic, Data-Based Color</h1>
           <p>
@@ -273,7 +273,7 @@
       </article>
       <div class="dflex-justify">
         <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
             <h1>Dynamic, Data-Based Color</h1>
@@ -283,29 +283,7 @@
           </div>
         </article>
         <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <h2>Ceejay Okoli</h2>
-            <h1>Dynamic, Data-Based Color</h1>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
-              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
-              reprehenderit at perspiciatis amet illum eos.</p>
-          </div>
-        </article>
-      </div>
-      <div class="dflex-justify">
-        <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <h2>Ceejay Okoli</h2>
-            <h1>Dynamic, Data-Based Color</h1>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
-              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
-              reprehenderit at perspiciatis amet illum eos.</p>
-          </div>
-        </article>
-        <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
             <h1>Dynamic, Data-Based Color</h1>
@@ -317,7 +295,7 @@
       </div>
       <div class="dflex-justify">
         <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
             <h1>Dynamic, Data-Based Color</h1>
@@ -327,7 +305,29 @@
           </div>
         </article>
         <article class="flex article-class-six-cards">
-          <img class="article-six-img-sml" src="Images/usericon.png" alt="">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+      </div>
+      <div class="dflex-justify">
+        <article class="flex article-class-six-cards">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+        <article class="flex article-class-six-cards">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
             <h1>Dynamic, Data-Based Color</h1>
@@ -348,7 +348,7 @@
           learned.</p>
         <button type='button' class='article-seven-items button'>JUMP TO TABLE OF CONTENTS ↬</button>
       </article>
-      <img src='Images/usericon.png' class='article-seven-img-lrg'>
+      <img src='Images/usericon.png' class='img-bent article-seven-img-lrg' alt="picture">
     </section>
 
     <section class='article-class-eight'>
@@ -377,7 +377,7 @@
         <button type='button' class='article-eight-buttons'>Explore Performance</button>
       </article>
       <article>
-        <img src='Images/usericon.png'>
+        <img src='Images/usericon.png' alt="picture">
         <h1 class='article-eight-items'>Email Newsletter</h1>
         <p class='article-eight-items'>Every second Tuesday, we send an email newsletter with useful techniques on
           front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.</p>
@@ -385,7 +385,7 @@
           <input class="article-eight-last-item-input" type='text'>
           <button type='button' class='last-button'> meeow</button>
         </div>
-        <p class='article-eight-items' Front-end> Front-end, UX and design. 1× a week.
+        <p class='article-eight-items'> Front-end, UX and design. 1× a week.
           You can always unsubscribe with just 1 click.</p>
       </article>
     </section>
@@ -422,6 +422,21 @@
       <li>text</li>
       <li>text</li>
     </ul>
+    <div class="dflex-justify ftr-flex-div">
+      <div>
+        <img src="images/usericon.png" alt="picture">
+      </div>
+      <div class="text-align">
+        <p class="footer-paragraph">With a commitment to quality content for the design community.</p>
+        <p class="footer-paragraph">Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.</p>
+        <p class="footer-paragraph">Smashing is proudly running on Netlify.</p>
+        <p class="footer-paragraph">Fonts by Latinotype.</p>
+        <p class="footer-paragraph"> <span>✎ Write for us</span> &nbsp; <span> Contact us</span>&nbsp; <span>About us(Impressum)</span>&nbsp;
+          <span>Privacy policy</span></p>
+        <p class="footer-paragraph"><span> Membership</span>   <span>loginDelivery</span>   <span>timesAdvertise</span> </p>
+      </div>
+      <img src="Images/usericon.png" alt="picture">
+    </div>
   </footer>
 </body>
 
