--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class='nav-item'><a href='#'>Membership</a></div>
           <div class='nav-item nav-button'> <a href="#"> more</a> </div>
         </div>
-        <div class='nav-search'><input type='text'></div>
+        <div class='nav-search'><input type='text' class = 'width-100'></div>
 
       </div>
     </nav>
@@ -34,7 +34,7 @@
       <article class="article-one">
         <div class="article-items one">
           <div class="article-container">
-            <div class="article-writer">
+            <div class="dflex">
               <img class="img-bent" src="Images/usericon.png" alt="">
               <div>
                 <h1>Juan Van Wissem <span>wrote</span></h1>
@@ -63,7 +63,7 @@
           </div>
         </div>
       </article>
-      <div class="position-div">
+      <div class="position-div dflex">
         <div>
           <p>
             <span>Don’t Miss These Latest</span>
@@ -71,7 +71,7 @@
             <span>Articles</span>
           </p>
         </div>
-        <div class="contrast-button">
+        <div class="contrast-button dflex">
           <div class="contrast-logo">
             <i class="fas fa-adjust"></i>
           </div>
@@ -113,7 +113,7 @@
         </div>
       </article>
     </section>
-    <section class='dflex second-article-container'>
+    <section class='dflex second-article-container width-100'>
       <article class='article-flex1'>
         <p class='article-flex1-items span'> 6 days ago</p>
         <h1 class='article-flex1-items'>
@@ -161,7 +161,7 @@
       </article>
     </section>
 
-    <section class='third-article-container'>
+    <section class='third-article-container dflex width-100'>
       <article class='article-flex2-item1'>
         <img src='Images/pic.png' alt='picture'>
         <p class='flex2-item1-paragraph'>Squarespace</p>
@@ -256,7 +256,7 @@
       </article>
     </section>
     <section class="article-class-six">
-      <article class="flex first-article-class-six">
+      <article class="dflex first-article-class-six">
         <img class="img-bent article-six-img-lrg" src="Images/usericon.png" alt="User">
         <div class="first-article-class-six-div">
           <h1>Dynamic, Data-Based Color</h1>
@@ -272,7 +272,7 @@
         </div>
       </article>
       <div class="dflex-justify">
-        <article class="flex article-class-six-cards">
+        <article class="dflex article-class-six-cards">
           <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
@@ -282,29 +282,7 @@
               reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
-        <article class="flex article-class-six-cards">
-          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <h2>Ceejay Okoli</h2>
-            <h1>Dynamic, Data-Based Color</h1>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
-              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
-              reprehenderit at perspiciatis amet illum eos.</p>
-          </div>
-        </article>
-      </div>
-      <div class="dflex-justify">
-        <article class="flex article-class-six-cards">
-          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
-          <div>
-            <h2>Ceejay Okoli</h2>
-            <h1>Dynamic, Data-Based Color</h1>
-            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
-              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
-              reprehenderit at perspiciatis amet illum eos.</p>
-          </div>
-        </article>
-        <article class="flex article-class-six-cards">
+        <article class="dflex article-class-six-cards">
           <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
@@ -316,7 +294,7 @@
         </article>
       </div>
       <div class="dflex-justify">
-        <article class="flex article-class-six-cards">
+        <article class="dflex article-class-six-cards">
           <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
@@ -326,7 +304,29 @@
               reprehenderit at perspiciatis amet illum eos.</p>
           </div>
         </article>
-        <article class="flex article-class-six-cards">
+        <article class="dflex article-class-six-cards">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+      </div>
+      <div class="dflex-justify">
+        <article class="dflex article-class-six-cards">
+          <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
+          <div>
+            <h2>Ceejay Okoli</h2>
+            <h1>Dynamic, Data-Based Color</h1>
+            <p>march 14, 2020- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum laborum ducimus magni
+              voluptates sapiente, delectus enim inventore quod nisi itaque aliquid consequatur corrupti ab
+              reprehenderit at perspiciatis amet illum eos.</p>
+          </div>
+        </article>
+        <article class="dflex article-class-six-cards">
           <img class="img-bent article-six-img-sml" src="Images/usericon.png" alt="">
           <div>
             <h2>Ceejay Okoli</h2>
@@ -392,31 +392,31 @@
   </main>
   <footer>
     <p></p>
-    <ul>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
+    <ul class = 'dflex'>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
     </ul>
-    <ul>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
-      <li>text</li>
+    <ul class = 'dflex'>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
+      <a href = '#'><li>text</li></a>
     </ul>
-    <ul>
+    <ul class = 'dflex'>
       <li>text</li>
       <li>text</li>
       <li>text</li>
@@ -424,7 +424,7 @@
     </ul>
     <div class="dflex-justify ftr-flex-div">
       <div>
-        <img src="images/usericon.png" alt="picture">
+        <img src="Images/usericon.png" alt="picture">
       </div>
       <div class="text-align">
         <p class="footer-paragraph">With a commitment to quality content for the design community.</p>
