Changes for linters

--- a/index.html
+++ b/index.html
@@ -393,28 +393,28 @@
   <footer>
     <p></p>
     <ul class = 'dflex'>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
     </ul>
     <ul class = 'dflex'>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
-      <a href = '#'><li>text</li></a>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
     </ul>
     <ul class = 'dflex'>
       <li>text</li>
